Footer fix on mobile devices

--- a/style.css
+++ b/style.css
@@ -305,6 +305,8 @@ nav{
 
 /* Footer */
 footer{
+    position: relative;
+    min-height: 100%;
     width: 100%;
     height: 10vh;
     display: flex;
